removed module cise-sim-io. Integrated in cise-sim-domain